package pl.edu.go.board;

/**
 * Reprezentuje typ terytorium pola planszy
 * podczas analizy końcowej pozycji.
 */
public enum Territory {

    /** Terytorium czarnych */
    BLACK,

    /** Terytorium białych */
    WHITE,

    /** Pole neutralne */
    NEUTRAL,

    /** Pole należące do seki */
    SEKI
}
