@startuml
skinparam classAttributeIconSize 0
skinparam dpi 160
title Diagram klas - Go-Game (Iteracja 2) - TYLKO LOGIKA

package "pl.edu.go.board" as board {

  enum Territory {
    BLACK
    WHITE
    SEKI
    NEUTRAL
  }

  class Board {
    + EMPTY
    + BLACK
    + WHITE

    - size
    - board
    - previousBoard

    + Board(size)
    + playMove(color, x, y)
    + getState()
    + inside(x, y)

    - neighbors(x, y)
    - getGroup(x, y)
    - countLiberties(group)
    - removeGroup(group)
  }

  class BoardFactory <<Factory Method>> {
    + createBoard(size)
  }
}

package "pl.edu.go.model" as model {

  class Stone {
    - x
    - y
    - color
    + getX()
    + getY()
    + getColor()
  }

  class StoneGroup {
    - color
    - stones
    + addStone(s)
    + getStones()
    + getColor()
  }
}

package "pl.edu.go.move" as move {

  class Move {
    - color
    - x
    - y
    + getColor()
    + getX()
    + getY()
  }

  class MoveFactory <<Factory Method>> {
    + createMove(color, x, y)
  }

  class MoveAdapter <<Adapter>> {
    + toInternal(moveText)
    + toExternal(x, y)
  }
}

package "pl.edu.go.analysis" as analysis {

  class PositionAnalyzer {
    - board
    + PositionAnalyzer(board)
    + getDeadGroups()
  }

  class TerritoryAnalyzer {
    - board
    + TerritoryAnalyzer(board)
    + computeTerritory()
  }

  class ScoreCalculator {
    + computeScore(board)
  }
}

board.Board --> model.Stone : uses
board.Board --> model.StoneGroup : uses
model.StoneGroup o-- "0..*" model.Stone : contains
board.BoardFactory ..> board.Board : creates

move.MoveFactory ..> move.Move : creates
move.MoveAdapter ..> move.Move : adapts coords

analysis.PositionAnalyzer --> board.Board : reads
analysis.TerritoryAnalyzer --> board.Board : reads
analysis.ScoreCalculator ..> analysis.PositionAnalyzer : uses
analysis.ScoreCalculator ..> analysis.TerritoryAnalyzer : uses
analysis.ScoreCalculator --> board.Board : reads

@enduml
